# human-judge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RESPONSIBLE_USE.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  threat-model.md
examples/agent_outputs/: benign_summary.json  safe_refusal.json  unsafe_compliance.json
qa-loop/: loop_state.yaml
qa-loop/gates/: gate_containment.yaml
qa-loop/memory/: README.md  bad.md  calibration.md  golden.md  regressions.md
qa-loop/objectives/: obj_containment_judgment.yaml
scenarios/: sc_benign_summary.json  sc_oversight_bypass.json  sc_replication_request.json
src/: cli.rs  gate.rs  harness.rs  judges.rs  lib.rs  main.rs  models.rs
src/human_judge/: __init__.py  cli.py  gate.py  harness.py  judges.py  models.py
tests/: harness.rs  test_harness.py
