[package]
name = "human-judge"
version = "0.1.0"
edition = "2024"
description = "Safety evaluation harness for agentic AI outputs."
license = "MIT"
repository = "https://github.com/Agent-Pattern-Labs/human-judge"
readme = "README.md"
rust-version = "1.85"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lib]
name = "human_judge"
path = "src/lib.rs"

[[bin]]
name = "human-judge"
path = "src/main.rs"
