[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "human-judge"
version = "0.1.0"
description = "Safety evaluation harness for agentic AI outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Agent Pattern Labs" }
]
dependencies = []

[project.scripts]
human-judge = "human_judge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
